# jaar

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  conftest.py  listen.py  main_listen.py  open_planeviewer.py  pyproject.toml
.github/workflows/: release.yml  run-tests-on-push.yml
docs/: c4_diagram.txt  chapter_blurbs.md  idea_brick_formats.md  keywords_by_chapter.md  module_blurbs.md  ropepointer_explanation.md  ropeterm_explanation.md  str_funcs.md
docs/a17_idea_brick_formats/: br00000.md  br00001.md  br00002.md  br00003.md  br00004.md  br00005.md  br00006.md  br00011.md  br00012.md  br00013.md  br00019.md  br00020.md  br00021.md  br00022.md  br00023.md  br00024.md  br00025.md  br00026.md  br00027.md  br00028.md  br00029.md  br00036.md  br00042.md  br00043.md  br00044.md  br00045.md  br00050.md  br00051.md  br00052.md  br00053.md  br00054.md  br00055.md  br00056.md  br00057.md  br00058.md  br00059.md  br00113.md  br00115.md  br00116.md  br00117.md
docs/ch17_idea_brick_formats/: br00000.md  br00001.md  br00002.md  br00003.md  br00004.md  br00005.md  br00006.md  br00011.md  br00012.md  br00013.md  br00019.md  br00020.md  br00021.md  br00022.md  br00023.md  br00024.md  br00025.md  br00026.md  br00027.md  br00028.md  br00029.md  br00036.md  br00042.md  br00043.md  br00044.md  br00045.md  br00050.md  br00051.md  br00052.md  br00053.md  br00054.md  br00055.md  br00056.md  br00057.md  br00058.md  br00059.md  br00113.md  br00115.md  br00116.md  br00117.md
docs/idea_brick_formats/: br00000.md  br00001.md  br00002.md  br00003.md  br00004.md  br00005.md  (+30 more)
(+7216 files in other folders)
