[project]
authors = [{name = "Emmanuel Schalk", email = "emmanuelschalk@gmail.com"}]
dependencies = [
  "pytest",
  "pandas",
  "plotly",
  "pytest-cov",
  "openpyxl",
  "sqlalchemy",
  "xlsxwriter",
]
description = ""
license = {text = "MIT"}
name = "jaar"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.isort]
force_sort_within_sections = true
no_sections = true
profile = "black"
